implement partials (header & footer)

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,17 +7,15 @@
     <title> <%= title %> </title>
 </head>
 <body>
-    <header>
-        Page header
-    </header>
+    
+    <%- include('_header'); %>
 
     <!-- <h1>Codeial / <%= title %></h1> -->
     <h1>
         Codeial / Home
     </h1>
 
-    <footer>
-        Page Footer
-    </footer>
+    <%- include('_footer'); %>
+
 </body>
 </html>
