set up extracting styles & scripts from sub-pages into layout

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,3 +1,4 @@
-<h1>
-  Codeial / Profile Page
-</h1>
+<link rel="stylesheet" href="/css/user_profile.css">
+  <h1>
+    Codeial / Profile Page
+  </h1>
