--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,6 +7,8 @@
     <title> <%= title %> </title>
     <!-- '/' below in the beginning refers to the root of 'assets' path we setted up in index.js -->
     <link rel="stylesheet" href="/css/layout.css">
+    <!-- it inserts every 'link' tag present in every views (home, user_profile, etc..) here -->
+    <%- style %>
 </head>
 <body>
     
@@ -16,6 +18,9 @@
     <%- body %>
 
     <%- include('_footer'); %>
+
+    <!-- it inserts every 'script' tag present in every views (home, user_profile, etc..) here -->
+    <%- script %>
 
 </body>
 </html>
