--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,1 +1,7 @@
 <h1>Sign In</h1>
+
+<form action="/user/create-session" method="POST">
+    <input type="email" name="email" placeholder="Email" required>
+    <input type="password" name="password" placeholder="Password" required>
+    <input type="submit" value="Sign In">
+</form>
