--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,6 +7,8 @@
     <title> <%= title %> </title>
     <!-- '/' below in the beginning refers to the root of 'assets' path we setted up in index.js -->
     <link rel="stylesheet" href="/css/layout.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <!-- it inserts every 'link' tag present in every views (home, user_profile, etc..) here -->
     <%- style %>
 </head>
@@ -14,8 +16,10 @@
     
     <%- include('_header'); %>
 
-    <!-- use body of home or user_profile etc. -->
-    <%- body %>
+    <main id="layout-main">
+        <!-- use body of home or user_profile etc. -->
+        <%- body %>
+    </main>
 
     <%- include('_footer'); %>
 
