--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,11 @@
 <h1>
   Codeial / Home
 </h1>
+
+<section id="feed-posts">
+  <h4>Posts</h4>
+  <form action="" id="new-post-form" method="POST">
+      <textarea name="content" cols="30" rows="3" placeholder="Type here..."></textarea>
+      <input type="submit" value="POST">
+  </form>
+</section>
