--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
 
 <section id="feed-posts">
   <h4>Posts</h4>
-  <form action="" id="new-post-form" method="POST">
+  <form action="/posts/create" id="new-post-form" method="POST">
       <textarea name="content" cols="30" rows="3" placeholder="Type here..."></textarea>
       <input type="submit" value="POST">
   </form>
