display posts on home page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,3 +9,13 @@
       <input type="submit" value="POST">
   </form>
 </section>
+
+<div id="posts-list-container">
+    <ul>
+        <% for(post of posts){ %>
+            <li>
+                <%= post.content %>
+            </li>
+        <% } %>
+    </ul>
+</div>
