display name of the user (below posts)

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,11 +11,17 @@
 </section>
 
 <div id="posts-list-container">
-    <ul>
-        <% for(post of posts){ %>
-            <li>
-                <%= post.content %>
-            </li>
-        <% } %>
-    </ul>
+  <ul>
+      <% for(post of posts){ %>
+              <li>
+                  <p>
+                      <%= post.content %>
+                      <br>
+                      <small>
+                          <%= post.user.name %>
+                      </small>
+                  </p>
+              </li>
+      <% } %>
+  </ul>
 </div>
