check authentication on creating post

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,10 +4,13 @@
 
 <section id="feed-posts">
   <h4>Posts</h4>
-  <form action="/posts/create" id="new-post-form" method="POST">
-      <textarea name="content" cols="30" rows="3" placeholder="Type here..."></textarea>
-      <input type="submit" value="POST">
-  </form>
+  <!-- form is only displayed/rendered if an 'user' is present/signed-in -->
+  <% if(locals.user){ %>
+      <form action="/posts/create" id="new-post-form" method="POST">
+          <textarea name="content" cols="30" rows="3" placeholder="Type here..."></textarea>
+          <input type="submit" value="POST">
+      </form>
+  <% } %>
 </section>
 
 <div id="posts-list-container">
