--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,6 +23,16 @@
                       <small>
                           <%= post.user.name %>
                       </small>
+                      <div id="post-comments">
+                          <!-- form is only displayed/rendered if an 'user' is present/signed-in -->
+                          <% if(locals.user){ %>
+                              <form action="/comments/create" id="new-comment-form" method="POST">
+                                  <input type="text" name="content" placeholder="Type here to add comment...">
+                                  <input type="hidden" name="post" value="<%= post._id %>">
+                                  <input type="submit" value="Add Comment">
+                              </form>
+                          <% } %>
+                      </div>
                   </p>
               </li>
       <% } %>
