--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
   <!-- form is only displayed/rendered if an 'user' is present/signed-in -->
   <% if(locals.user){ %>
       <form action="/posts/create" id="new-post-form" method="POST">
-          <textarea name="content" cols="30" rows="3" placeholder="Type here..."></textarea>
+          <textarea name="content" cols="30" rows="3" placeholder="Type here..." required></textarea>
           <input type="submit" value="POST">
       </form>
   <% } %>
@@ -23,15 +23,28 @@
                       <small>
                           <%= post.user.name %>
                       </small>
-                      <div id="post-comments">
+                      <div class="post-comments">
                           <!-- form is only displayed/rendered if an 'user' is present/signed-in -->
                           <% if(locals.user){ %>
                               <form action="/comments/create" id="new-comment-form" method="POST">
-                                  <input type="text" name="content" placeholder="Type here to add comment...">
+                                  <input type="text" name="content" placeholder="Type here to add comment..." required>
                                   <input type="hidden" name="post" value="<%= post._id %>">
                                   <input type="submit" value="Add Comment">
                               </form>
                           <% } %>
+                          <div class="post-comments-list">
+                              <ul id="post-comments-<%= post._id %>">
+                                  <% for(comment of post.comments){ %>
+                                      <p>
+                                          <%= comment.content %>
+                                          <br>
+                                          <small>
+                                              <%= comment.user.name %>
+                                          </small>
+                                      </p>
+                                  <% } %>
+                              </ul>
+                          </div>
                       </div>
                   </p>
               </li>
