--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,55 +16,9 @@
 <div id="posts-list-container">
   <ul>
       <% for(post of posts){ %>
-              <li>
-                  <p>
-                      <!-- if user is signed-in & also, if the user signed-in is same 
-                      as the user who created the post -->
-                      <% if((locals.user) && (locals.user.id == post.user.id)){ %>
-                          <small>
-                              <a href="/posts/destroy/<%= post.id %>">
-                                  X
-                              </a>
-                          </small>
-                      <% } %>
-                      <%= post.content %>
-                      <br>
-                      <small>
-                          <%= post.user.name %>
-                      </small>
-                      <div class="post-comments">
-                          <!-- form is only displayed/rendered if an 'user' is present/signed-in -->
-                          <% if(locals.user){ %>
-                              <form action="/comments/create" id="new-comment-form" method="POST">
-                                  <input type="text" name="content" placeholder="Type here to add comment..." required>
-                                  <input type="hidden" name="post" value="<%= post._id %>">
-                                  <input type="submit" value="Add Comment">
-                              </form>
-                          <% } %>
-                          <div class="post-comments-list">
-                              <ul id="post-comments-<%= post._id %>">
-                                  <% for(comment of post.comments){ %>
-                                      <p>
-                                          <% if((locals.user) && (locals.user.id == comment.user.id)){ %>
-                                              <small>
-                                                  <a href="/comments/destroy/<%= comment.id %>">
-                                                      X
-                                                  </a>
-                                              </small>
-                                          <% } %>
-                                          <%= comment.content %>
-                                          <br>
-                                          
-                                          <small>
-                                              <%= comment.user.name %>
-                                          </small>
-                                      </p>
-                                  <% } %>
-                              </ul>
-                          </div>
-                      </div>
-                  </p>
-              </li>
+              
+          <%- include('_post'); %>
+          
       <% } %>
   </ul>
 </div>
