--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,4 +1,7 @@
 <link rel="stylesheet" href="/css/user_profile.css">
-  <h1>
-    Codeial / Profile Page
-  </h1>
+    <h1>
+        Codeial / Profile Page
+    </h1>
+
+    <p><%= profile_user.name %></p>
+    <p><%= profile_user.email %></p>
