--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,6 +1,7 @@
+html,
 body {
   margin: 0;
-  /* text-align: center;
-  background: lightblue; */ }
-  body #layout-main {
-    height: 100%; }
+  height: 100%; }
+
+body #layout-main {
+  height: 100%; }
