--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,7 +1,12 @@
-body{
+html,
+body {
   margin: 0;
+  height: 100%;
+}
 
-  #layout-main{
-      height: 100%;
+body {
+
+  #layout-main {
+    height: 100%;
   }
 }
