--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,34 +1,35 @@
-<h1>
-  Codeial / Home
-</h1>
+<link rel="stylesheet" href="/css/home.css">
 
-<section id="feed-posts">
-  <h4>Posts</h4>
-  <!-- form is only displayed/rendered if an 'user' is present/signed-in -->
-  <% if(locals.user){ %>
-      <form action="/posts/create" id="new-post-form" method="POST">
-          <textarea name="content" cols="30" rows="3" placeholder="Type here..." required></textarea>
-          <input type="submit" value="POST">
-      </form>
-  <% } %>
-
-  <div id="posts-list-container">
-      <ul>
-          <% for(post of posts){ %>
-                  
-              <%- include('_post'); %>
-          <% } %>
-      </ul>
-  </div>
-</section>
-
-<section id="user-friends">
-  <h4>Friends</h4>
-  <% for(u of all_users){ %>
-      <p>
-          <a href="/users/profile/<%= u.id %>">
-              <%= u.name %>
-          </a>
-      </p>
-  <% } %>
-</section>
+<div id="home-container">
+    <section id="feed-posts">
+        <h4>Posts</h4>
+        <!-- form is only displayed/rendered if an 'user' is present/signed-in -->
+        <% if(locals.user){ %>
+            <form action="/posts/create" id="new-post-form" method="POST">
+                <textarea name="content" cols="30" rows="3" placeholder="Type here..." required></textarea>
+                <input type="submit" value="POST">
+            </form>
+        <% } %>
+    
+        <div id="posts-list-container">
+            <ul>
+                <% for(post of posts){ %>
+                        
+                    <%- include('_post'); %>
+    
+                <% } %>
+            </ul>
+        </div>
+    </section>
+    
+    <section id="user-friends">
+        <h4>Friends</h4>
+        <% for(u of all_users){ %>
+            <p>
+                <a href="/users/profile/<%= u.id %>">
+                    <%= u.name %>
+                </a>
+            </p>
+        <% } %>
+    </section>
+</div>
