create flash card messages (using Noty.js)

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> <%= title %> </title>
+    <!-- Noty js CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
     <!-- '/' below in the beginning refers to the root of 'assets' path we setted up in index.js -->
     <link rel="stylesheet" href="/css/layout.css">
     <link rel="stylesheet" href="/css/header.css">
@@ -16,13 +19,6 @@
     
     <%- include('_header'); %>
 
-    <!-- flash.success should not be an empty string/object -->
-    <% if(flash.success && flash.success.length > 0){ %>
-        <h5>
-            <%= flash.success %>
-        </h5>
-    <% } %>
-
     <main id="layout-main">
         <!-- use body of home or user_profile etc. -->
         <%- body %>
@@ -32,6 +28,29 @@
 
     <!-- it inserts every 'script' tag present in every views (home, user_profile, etc..) here -->
     <%- script %>
+
+    <script>
+        <!-- flash.success should not be an empty string/object -->
+        <% if(flash.success && flash.success.length > 0){ %>
+            new Noty({
+                theme: 'relax',
+                text: '<%= flash.success %>',
+                type: 'success',
+                layout: 'topRight',
+                timeout: 1500
+            }).show();
+        <% } %>
+        <!-- flash.error should not be an empty string/object -->
+        <% if(flash.error && flash.error.length > 0){ %>
+            new Noty({
+                theme: 'relax',
+                text: '<%= flash.error %>',
+                type: 'error',
+                layout: 'topRight',
+                timeout: 1500
+            }).show();
+        <% } %>
+    </script>
 
 </body>
 </html>
