display avatar on profile page

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,10 +1,10 @@
 <link rel="stylesheet" href="/css/user_profile.css">
-    <h1>
-        Codeial / Profile Page
-    </h1>
+   
+    <img src="<%= user.avatar %>" alt="<%= user.name %>" width="100">
 
     <% if(user.id == profile_user.id){ %>
     <!-- if user matches then show the form -->
+
         <!-- body-parser can't parse form data now, due to enctype="multipart/form-data" -->
         <!-- i.e. it is now a multipart form -->
         <form action="/users/update/<%= profile_user.id %>" enctype="multipart/form-data" method="POST">
@@ -13,9 +13,11 @@
             <input type="file" name="avatar" placeholder="Profile Picture">
             <input type="submit" value="Update">
         </form>
+
     <% } else { %>
     <!-- else show only the profile info -->
     
         <p><%= profile_user.name %></p>
         <p><%= profile_user.email %></p>
+
     <% } %>
