setup google-sign-in route & add in views

--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -7,3 +7,9 @@
     <input type="password" name="confirm_password" placeholder="Confirm Password" required>
     <input type="submit" value="Sign Up">
 </form>
+
+<p>
+    <a href="/users/auth/google">
+        Google Sign-in / Sign-up
+    </a>
+</p> 
