--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -5,3 +5,9 @@
     <input type="password" name="password" placeholder="Password" required>
     <input type="submit" value="Sign In">
 </form>
+
+<p>
+    <a href="/users/auth/google">
+        Google Sign-in / Sign-up
+    </a>
+</p>
