create chat-box partial in views

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/css/home.css">
+<link rel="stylesheet" href="/css/chat_box.css">
 
 <div id="home-container">
     <section id="feed-posts">
@@ -32,6 +33,9 @@
             </p>
         <% } %>
     </section>
+
+    <%- include('_chat_box') -%>
+    
 </div>
 
 <script src="/js/home_post_comments.js"></script>
