--- a/views/home.ejs
+++ b/views/home.ejs
@@ -50,3 +50,12 @@
         let toggleLike = new ToggleLike(self);
     });
 </script>
+
+<!-- import Chat Box scripts -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+<script src="/js/chat_engine.js"></script>
+<% if(locals.user){ %>
+    <script>
+        new ChatEngine('user-chat-box', '<%= locals.user.email %>')
+    </script>
+<% } %>
