--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/user_profile.css">
+<link rel="stylesheet" href="<%= assetPath('css/user_profile.css') %>">
    
     <img src="<%= user.avatar %>" alt="<%= user.name %>" width="100">
 
