--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,9 +11,9 @@
     <!-- JQuery CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- '/' below in the beginning refers to the root of 'assets' path we setted up in index.js -->
-    <link rel="stylesheet" href="/css/layout.css">
-    <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="<%= assetPath('css/layout.css') %>">
+    <link rel="stylesheet" href="<%= assetPath('css/header.css') %>">
+    <link rel="stylesheet" href="<%= assetPath('css/footer.css') %>">
     <!-- it inserts every 'link' tag present in every views (home, user_profile, etc..) here -->
     <%- style %>
 </head>
