--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,61 +1,62 @@
-<link rel="stylesheet" href="<%= assetPath('css/home.css') %>">
-<link rel="stylesheet" href="<%= assetPath('css/chat_box.css') %>">
+<link rel="stylesheet" href="<%= assetPath('css/home.css') %>" />
+<link rel="stylesheet" href="<%= assetPath('css/chat_box.css') %>" />
 
 <div id="home-container">
-    <section id="feed-posts">
-        <h4>Posts</h4>
-        <!-- form is only displayed/rendered if an 'user' is present/signed-in -->
-        <% if(locals.user){ %>
-            <form action="/posts/create" id="new-post-form" method="POST">
-                <textarea name="content" cols="30" rows="3" placeholder="Type here..." required></textarea>
-                <input type="submit" value="POST">
-            </form>
-        <% } %>
-    
-        <div id="posts-list-container">
-            <ul>
-                <% for(post of posts){ %>
-                        
-                    <%- include('_post'); %>
-    
-                <% } %>
-            </ul>
-        </div>
-    </section>
-    
-    <section id="user-friends">
-        <h4>Friends</h4>
-        <% for(u of all_users){ %>
-            <p>
-                <a href="/users/profile/<%= u.id %>">
-                    <%= u.name %>
-                </a>
-            </p>
-        <% } %>
-    </section>
+  <section id="feed-posts">
+    <h4>Posts</h4>
+    <!-- form is only displayed/rendered if an 'user' is present/signed-in -->
+    <% if(locals.user){ %>
+    <form action="/posts/create" id="new-post-form" method="POST">
+      <textarea
+        name="content"
+        cols="30"
+        rows="3"
+        placeholder="Type here..."
+        required
+      ></textarea>
+      <input type="submit" value="POST" />
+    </form>
+    <% } %>
 
-    <%- include('_chat_box') -%>
-    
+    <div id="posts-list-container">
+      <ul>
+        <% for(post of posts){ %> <%- include('_post'); %> <% } %>
+      </ul>
+    </div>
+  </section>
+
+  <section id="user-friends">
+    <h4>Friends</h4>
+    <% for(u of all_users){ %>
+    <p>
+      <a href="/users/profile/<%= u.id %>">
+        <%= u.name %>
+      </a>
+    </p>
+    <% } %>
+  </section>
+
+  <%- include('_chat_box') -%>
 </div>
 
-<script src="<%= assetPath('js/home_post_comments.js') %>" ></script>
+<script src="<%= assetPath('js/home_post_comments.js') %>"></script>
 <script src="<%= assetPath('js/home_posts.js') %>"></script>
 
 <!-- import the script file for toggle likes, also run it over 
     for the already present posts and comments on the page -->
 <script src="<%= assetPath('js/toggle_likes.js') %>"></script>
 <script>
-    $('.toggle-like-button').each(function(){
-        let self = this;
-        let toggleLike = new ToggleLike(self);
-    });
+  $('.toggle-like-button').each(function () {
+    let self = this;
+    let toggleLike = new ToggleLike(self);
+  });
 </script>
 
 <!-- import Chat Box scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
 <script src="<%= assetPath('js/chat_engine.js') %>"></script>
 <% if(locals.user){ %>
-    <script>
-        new ChatEngine('user-chat-box', '<%= locals.user.email %>')
-    </script>
+<script>
+  new ChatEngine('user-chat-box', '<%= locals.user.email %>');
+</script>
 <% } %>
