--- a/views/mailers/comments/new_comment.ejs
+++ b/views/mailers/comments/new_comment.ejs
@@ -1,9 +1,10 @@
 <div>
   <p>Hi <%= comment.user.name %>!</p>
-  <br>
+  <br />
   <p>
-      Your comment <strong><%= comment.content %></strong> just got published on Codeial.
+    Your comment <strong><%= comment.content %></strong> just got published on
+    Codeial.
   </p>
-  <br>
+  <br />
   <p>Thanks!</p>
 </div>
