--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,23 +1,39 @@
-<link rel="stylesheet" href="<%= assetPath('css/user_profile.css') %>">
-   
-    <img src="<%= user.avatar %>" alt="<%= user.name %>" width="100">
+<link rel="stylesheet" href="<%= assetPath('css/user_profile.css') %>" />
 
-    <% if(user.id == profile_user.id){ %>
-    <!-- if user matches then show the form -->
+<img src="<%= user.avatar %>" alt="<%= user.name %>" width="100" />
 
-        <!-- body-parser can't parse form data now, due to enctype="multipart/form-data" -->
-        <!-- i.e. it is now a multipart form -->
-        <form action="/users/update/<%= profile_user.id %>" enctype="multipart/form-data" method="POST">
-            <input type="text" name="name" placeholder="Your Name" value="<%= profile_user.name %>" required>
-            <input type="email" name="email" placeholder="Your Email" value="<%= profile_user.email %>" required>
-            <input type="file" name="avatar" placeholder="Profile Picture">
-            <input type="submit" value="Update">
-        </form>
+<% if(user.id == profile_user.id){ %>
+<!-- if user matches then show the form -->
 
-    <% } else { %>
-    <!-- else show only the profile info -->
-    
-        <p><%= profile_user.name %></p>
-        <p><%= profile_user.email %></p>
+<!-- body-parser can't parse form data now, due to enctype="multipart/form-data" -->
+<!-- i.e. it is now a multipart form -->
+<form
+  action="/users/update/<%= profile_user.id %>"
+  enctype="multipart/form-data"
+  method="POST"
+>
+  <input
+    type="text"
+    name="name"
+    placeholder="Your Name"
+    value="<%= profile_user.name %>"
+    required
+  />
+  <input
+    type="email"
+    name="email"
+    placeholder="Your Email"
+    value="<%= profile_user.email %>"
+    required
+  />
+  <input type="file" name="avatar" placeholder="Profile Picture" />
+  <input type="submit" value="Update" />
+</form>
 
-    <% } %>
+<% } else { %>
+<!-- else show only the profile info -->
+
+<p><%= profile_user.name %></p>
+<p><%= profile_user.email %></p>
+
+<% } %>
