--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,13 +1,13 @@
 <h1>Sign In</h1>
 
 <form action="/users/create-session" method="POST">
-    <input type="email" name="email" placeholder="Email" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <input type="submit" value="Sign In">
+  <input type="email" name="email" placeholder="Email" required />
+  <input type="password" name="password" placeholder="Password" required />
+  <input type="submit" value="Sign In" />
 </form>
 
 <p>
-    <a href="/users/auth/google">
-        Google Sign-in / Sign-up
-    </a>
+  <a href="/users/auth/google">
+    Google Sign-in / Sign-up
+  </a>
 </p>
