--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -1,15 +1,20 @@
 <h1>Sign Up</h1>
 
 <form action="/users/create" method="POST">
-    <input type="text" name="name" placeholder="Your Name" required>
-    <input type="email" name="email" placeholder="Your Email" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <input type="password" name="confirm_password" placeholder="Confirm Password" required>
-    <input type="submit" value="Sign Up">
+  <input type="text" name="name" placeholder="Your Name" required />
+  <input type="email" name="email" placeholder="Your Email" required />
+  <input type="password" name="password" placeholder="Password" required />
+  <input
+    type="password"
+    name="confirm_password"
+    placeholder="Confirm Password"
+    required
+  />
+  <input type="submit" value="Sign Up" />
 </form>
 
 <p>
-    <a href="/users/auth/google">
-        Google Sign-in / Sign-up
-    </a>
-</p> 
+  <a href="/users/auth/google">
+    Google Sign-in / Sign-up
+  </a>
+</p>
